# LungTumorDetector

./: .gitattributes  .gitignore  .me  README.md  SETUP_GUIDE.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  retrain_model.py  setup.bat  start.bat  test_validation.py  vite.config.js
model/: load_model.py
src/: App.jsx  test-firebase.js
src/components/: DoctorFinder.jsx  ImageUpload.jsx  Navigation.jsx  Results.jsx
src/components/Auth/: Login.jsx  Register.jsx
src/components/landing/: LandingPage.jsx
src/components/profile/: ProfileDrawer.jsx  ProfilePage.jsx  ScanHistoryPage.jsx
src/config/: firebase.js
src/hooks/: useAuth.js
src/services/: api.js
src/styles/: App.css
src/utils/: generatePDF.js
static/uploads/: .gitkeep
utils/: preprocess.py
