[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "firebase-admin>=6.9.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python-headless>=4.8.0,<4.12.0",
    "passlib>=1.7.4",
    "pillow>=11.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "scipy>=1.15.3",
    "tensorflow==2.15.0",
    "keras>=3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "uvicorn>=0.34.3",
]
